refactor: RoundResult DTO 생성하여 Cars의 result에서 RoundResult를 리턴하도록 개선 - 컨트롤러에서 List<RoundResult>로 관리하며 가독성 개선